fix stretched categories images on narrow screen

--- a/catalog/css/component.css
+++ b/catalog/css/component.css
@@ -36,7 +36,9 @@
 .grid figure img {
 	position: relative;
 	display: block;
-	min-height: 100%;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 	opacity: 0.8;
 }
 
@@ -228,12 +230,10 @@ figure.effect-roxy {
 }
 
 figure.effect-roxy img {
-	width: -webkit-calc(100% + 60px);
-	width: calc(100% + 60px);
 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
 	transition: opacity 0.35s, transform 0.35s;
-	-webkit-transform: translate3d(-50px,0,0);
-	transform: translate3d(-50px,0,0);
+	-webkit-transform: scale(1.08) translate3d(-12px,0,0);
+	transform: scale(1.08) translate3d(-12px,0,0);
 	opacity: 1;
 }
 
@@ -271,8 +271,8 @@ figure.effect-roxy p {
 
 figure.effect-roxy:hover img {
 	opacity: 0.7;
-	-webkit-transform: translate3d(0,0,0);
-	transform: translate3d(0,0,0);
+	-webkit-transform: scale(1.08) translate3d(0,0,0);
+	transform: scale(1.08) translate3d(0,0,0);
 }
 
 figure.effect-roxy:hover figcaption::before,
